  add a comment header with some channel information.
- Polynomial distortion: GtkEntry errors when instant update took too long
  were fixed.
- Point layer: Radius indicator scales properly when the layer is scaled.
- Calibrate: The precision of scale spin buttons was increased.
- Graph fit: Initial estimated curve label saying "noun|Estimate" was fixed.

Other:
- Freedesktop MIME types conflicting with existing types were removed or
  otherwise corrected.


2.5 (2007-03-10)
Application:
- Options for opening files in an already running instance of Gwyddion were
  added (--remote-new, --remote-existing).
- It is possible to save a file with graphs only.
- Drag'n'drop of files onto toolbox actually works now with modern file
  managers and on Win32.
- It's possible to copy (compatible) curves among graphs by Drag'n'drop from
  graph Curves, and delete them by pressing Delete key in Curves.
- Translations updated: Czech, German, Italian.

Libraries:
- libgwydgets: New GwyGraphCurves widget showing the curve list with
  properties, it's used in GwyGraphWindow.
- libgwydgets: Light source theta and phi determined by the same mouse
  coordinate were fixed.
- libgwyprocess: Skewed gwy_data_field_area_fit_local_planes() output for
  even plane sizes was fixed.
- libgwyapp: Document history Prune button bug causing Critical Gtk+ messages
  was fixed.
- libgwyddion: NL fitter presets can derive parameter units from the units
  of fitted curves.
- libgwyddion: New SI Unit function to take root of a unit.
- libgwyprocess: New function for general xy plane transform/distortion
  gwy_data_field_distort().
- libgwyprocess: Critical dimension evaluator can derive parameter units from
  the units of fitted data.
- libgwyapp: Drag'n'drop is really possible also with data browser graph list,
  not just with channels.
- libgwyapp: Data and graph windows not getting keyboard focus were fixed.
- libgwyddion: gwy_math_humanize_numbers() tries harder to make numbers